Fix align of list icons

--- a/src/sass/components/_lists.scss
+++ b/src/sass/components/_lists.scss
@@ -67,15 +67,14 @@
       display: flex;
       flex-direction: column;
       align-items: flex-start;
+      text-align: center;
 
       .box-left{
         width: 100%;
-        text-align: center;
       }
 
       .box-center{
         width: 100%;
-        text-align: center;
       }
 
       .box-right{
